--- a/templates/html/pages/admin/formulario-evento.html
+++ b/templates/html/pages/admin/formulario-evento.html
@@ -1,32 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-5">
-    <form action="{{ url_for('novo_evento') }}" method="POST">
-        <div class="form-group">
-            <label for="nome_evento">Nome</label>
-            <input name="nome_evento" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="tipo_evento">Tipo</label>
-            <input name="tipo_evento" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="data_evento">Data</label>
-            <input type="date" name="data_evento" class="form-control" id="data_evento">
-        </div>
-        <div class="form-group">
-            <label for="horario_evento">Horário</label>
-            <input type="time" name="horario_evento" class="form-control" id="horario_evento">
-        </div>
-        <div class="form-group">
-            <label for="cliente">Cliente</label>
-            <select name="cliente_evento" class="form-select" id="cliente">
-                <option selected>Selecione um cliente</option>
-                {% for evento_joined in eventos_joined %}
-                <option value="{{ evento_joined[4] }}">{{ evento_joined[4] }} - {{ evento_joined[5] }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="w-50">
+        <form action="{{ url_for('novo_evento') }}" method="POST" class="border p-4 rounded">
+            <h1 class="text-center mb-4">Novo evento</h1>
+            <div class="form-group mb-3">
+                <label for="nome_evento">Nome</label>
+                <input name="nome_evento" class="form-control">
+            </div>
+            <div class="form-group mb-3">
+                <label for="tipo_evento">Tipo</label>
+                <input name="tipo_evento" class="form-control">
+            </div>
+            <div class="form-group mb-3">
+                <label for="data_evento">Data</label>
+                <input type="date" name="data_evento" class="form-control" id="data_evento">
+            </div>
+            <div class="form-group mb-3">
+                <label for="horario_evento">Horário</label>
+                <input type="time" name="horario_evento" class="form-control" id="horario_evento">
+            </div>
+            <div class="form-group mb-3">
+                <label for="cliente">Cliente</label>
+                <select name="cliente_evento" class="form-select" id="cliente">
+                    <option selected>Selecione um cliente</option>
+                    {% for cliente in clientes %}
+                    <option value="{{cliente[0] }}">{{cliente[0] }} - {{ cliente[1] }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
