--- a/templates/html/pages/homepage.html
+++ b/templates/html/pages/homepage.html
@@ -4,14 +4,11 @@
 
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="4000">
-            <img src="static/imgs/imgs_carousel/img-1.jpg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
+          <div class="carousel-item active carousel-1" data-bs-interval="4000">
           </div>
-          <div class="carousel-item" data-bs-interval="4000">
-            <img src="static/imgs/imgs_carousel/img-2.jpeg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
+          <div class="carousel-item carousel-2" data-bs-interval="4000">
           </div>
-          <div class="carousel-item" data-bs-interval="4000">
-            <img src="static/imgs/imgs_carousel/img-3.jpg" class="d-block w-100" style="width: 800px; height: 500px;" alt="...">
+          <div class="carousel-item carousel-3" data-bs-interval="4000">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
