Atualizando paginas de login e perfil

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
+    font-family: "Roboto", sans-serif !important;
+  }
+
 .navbar{
     background-color: #ffffff;
     color: #fff;
@@ -53,6 +58,8 @@
     background-color: #000000;
     color: #ffffff;
     padding: 10px !important;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
 }
 
 .button_agendar:hover {
