--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -1,39 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="d-flex align-items-center justify-content-center min-vh-100">
-    <div class="w-100" style="max-width: 400px;">
-        <!-- Inserir as mensagens flash aqui -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            {% for category, message in messages %}
-              <div class="alert alert-{{ category }}">
-                {{ message }}
-              </div>
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
-
-        <form class="login__form p-4 border rounded shadow-sm" method="POST" action="{{ url_for('login') }}">
-            <fieldset>
-                <h1 class="mb-4">Login</h1>
-                <div class="mb-3">
-                    <label for="cpf" class="form-label">CPF:</label>
-                    <input type="text" class="form-control" id="cpf" placeholder="CPF" name="cpf">
-                </div>
-                <div class="mb-3">
-                    <label for="senha" class="form-label">Senha:</label>
-                    <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                    <a href="{{ url_for('cadastrar') }}">Cadastre-se</a>
-                </div>
-            </fieldset>
-        </form>
+<div class="d-flex align-items-center justify-content-center min-vh-50">
+  <div class="w-100" style="max-width: 400px;">
+    <!-- Inserir as mensagens flash aqui -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}">
+      {{ message }}
     </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+    <form class="login__form mt-5 p-4 border rounded shadow-sm" method="POST" action="{{ url_for('login') }}">
+      <fieldset>
+        <h1 class="mb-4">Login</h1>
+        <div class="mb-3">
+          <label for="cpf" class="form-label">CPF:</label>
+          <input type="text" class="form-control" id="cpf" placeholder="CPF" name="cpf">
+        </div>
+        <div class="mb-3">
+          <label for="senha" class="form-label">Senha:</label>
+          <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <button type="submit" class="btn btn-primary">Login</button>
+          <a href="{{ url_for('cadastrar') }}">Cadastre-se</a>
+        </div>
+      </fieldset>
+    </form>
+  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
