--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="d-flex align-items-center justify-content-center min-vh-50">
+<div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
   <div class="w-100" style="max-width: 400px;">
     <!-- Inserir as mensagens flash aqui -->
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -13,9 +13,9 @@
     {% endfor %}
     {% endif %}
     {% endwith %}
-    <form class="login__form mt-5 p-4 border rounded shadow-sm" method="POST" action="{{ url_for('login') }}">
+    <form class="bg-white login__form p-4 border rounded shadow-sm" method="POST" action="{{ url_for('login') }}">
       <fieldset>
-        <h1 class="mb-4">Login</h1>
+        <h1 class="mb-4">Faça seu Login</h1>
         <div class="mb-3">
           <label for="cpf" class="form-label">CPF:</label>
           <input type="text" class="form-control" id="cpf" placeholder="CPF" name="cpf">
@@ -24,8 +24,8 @@
           <label for="senha" class="form-label">Senha:</label>
           <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
         </div>
-        <div class="d-flex justify-content-between align-items-center">
-          <button type="submit" class="btn btn-primary">Login</button>
+        <div class="btn-cadastre d-flex justify-content-between align-items-center">
+          <button type="submit" class="btn btn btn-login">Entrar</button>
           <a href="{{ url_for('cadastrar') }}">Cadastre-se</a>
         </div>
       </fieldset>
