começando a parte de pagamentos admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_admin') }}">Eventos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('clientes_admin') }}">Clientes</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Pagamentos</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Kits Mobília</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Parceiros</a></li>
+
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                                     </ul>
