--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -3,12 +3,25 @@
 {% block content %}
 <div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
   <div class="w-100" style="max-width: 400px;">
-    <!-- Inserir as mensagens flash aqui -->
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
     {% for category, message in messages %}
-    <div class="alert alert-{{ category }}">
-      {{ message }}
+    <div class="modal{{ category }}" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>{{ message }}</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
     </div>
     {% endfor %}
     {% endif %}
