Adicionando tela de contato, produtos e servicos

--- a/templates/html/pages/homepage.html
+++ b/templates/html/pages/homepage.html
@@ -4,13 +4,21 @@
 
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active carousel-1" data-bs-interval="4000">
-          </div>
-          <div class="carousel-item carousel-2" data-bs-interval="4000">
-          </div>
-          <div class="carousel-item carousel-3" data-bs-interval="4000">
-          </div>
+            <!-- Carousel item 1 -->
+            <div class="carousel-item active carousel-1" data-bs-interval="4000">
+                <!-- Empty carousel item -->
+            </div>
+            <!-- Carousel item 2 -->
+            <div class="carousel-item carousel-2" data-bs-interval="4000">
+                <!-- Empty carousel item -->
+            </div>
+            <!-- Carousel item 3 -->
+            <div class="carousel-item carousel-3" data-bs-interval="4000">
+                <!-- Empty carousel item -->
+            </div>
         </div>
+        
+        <!-- Carousel controls -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -20,7 +28,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
+    <!-- Fixed text overlay -->
+    <div class="fixed-overlay d-flex flex-column justify-content-center align-items-center">
+        <h1 class="display-4 text-light">REALIZE A FESTA DOS SEUS SONHOS</h1>
+        <h2 class="subtitle text-light">SALÃO DE FESTAS LUTILÊ</h2>
+    </div>
     
 </section>
-
 {% endblock content %}
