--- a/templates/base.html
+++ b/templates/base.html
@@ -63,15 +63,15 @@
                         </li>
                         <span class = "separador nav-link">|</span> <!-- Separador -->
                         <li class="nav-item me-5 ms-5">
-                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">PRODUTOS</a>
+                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('produtos')}}">PRODUTOS</a>
                         </li>
                         <span class = "separador nav-link">|</span> <!-- Separador -->
                         <li class="nav-item me-5 ms-5">
-                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">SERVIÇOS</a>
+                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('servicos')}}">SERVIÇOS</a>
                         </li>
                         <span class = "separador nav-link">|</span> <!-- Separador -->
                         <li class="nav-item me-5 ms-5">
-                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('login')}}">CONTATO</a>
+                            <a class="nav-link {{is_active('login')}}" aria-current="page" href="{{url_for('contato')}}">CONTATO</a>
                         </li>
                         <li class="nav-item">
                             <form action="{{url_for('login')}}" method="get">
