--- a/templates/html/pages/servicos.html
+++ b/templates/html/pages/servicos.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <a id="redirection" href="{{ url_for('home') }}" class="btn ss mt-4">Voltar</a>
+                <a id="redirection" href="{{ url_for('home') }}" class="btn btn btn-login">Voltar</a>
             </div>
         </div>
     </div>
