--- a/templates/html/pages/produtos.html
+++ b/templates/html/pages/produtos.html
@@ -35,7 +35,7 @@
 
             <!-- Botão de Voltar -->
             <div class="d-flex justify-content-between align-items-center mt-4">
-                <a id="redirection" href="{{ url_for('dashboard_cliente') }}" class="btn btn-secondary">Voltar</a>
+                <a id="redirection" href="{{ url_for('dashboard_cliente') }}" class="btn btn btn-login">Voltar</a>
             </div>
         </div>
     </div>
