--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                                         <li><a class="dropdown-item" href="{{ url_for('clientes_admin') }}">Clientes</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Pagamentos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Kits Mobília</a></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Parceiros</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('parceiros_admin') }}">Parceiros</a></li>
 
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
