crud kits mobilia admin funcionando

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_admin') }}">Eventos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('clientes_admin') }}">Clientes</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Pagamentos</a></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Kits Mobília</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('kits_mobilia_admin') }}">Kits Mobília</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('parceiros_admin') }}">Parceiros</a></li>
 
                                         <li><hr class="dropdown-divider"></li>
