--- a/templates/html/pages/admin/eventos-admin.html
+++ b/templates/html/pages/admin/eventos-admin.html
@@ -4,8 +4,9 @@
 <h1 class="text-center">Eventos marcados</h1>
 <div class="container d-flex flex-column align-items-center">
     <div class="w-100 d-flex justify-content-end mb-3">
-        <a href="{{ url_for('novo_evento') }}" class="btn btn-primary">Novo evento</a>
-    </div>
+      <a href="{{ url_for('gerar_relatorio_eventos') }}" class="btn btn-info me-2">Gerar relatório</a>
+      <a href="{{ url_for('novo_evento') }}" class="btn btn-primary">Novo evento</a>
+      </div>
     <table class="table table">
         <thead>
           <tr>
