--- a/templates/html/pages/admin/formulario-evento.html
+++ b/templates/html/pages/admin/formulario-evento.html
@@ -15,7 +15,19 @@
             </div>
             <div class="form-group mb-3">
                 <label for="tipo_evento">Tipo</label>
-                <input name="tipo_evento"  class="form-control">
+                <select name="tipo_evento" id="tipo_evento" class="form-control">
+                    <option value="">Selecione o tipo de evento</option>
+                    <option value="Casamento">Casamento</option>
+                    <option value="Aniversario">Aniversário</option>
+                    <option value="Corporativo">Corporativo</option>
+                    <option value="Formatura">Formatura</option>
+                    <option value="Debutante">Debutante</option>
+                    <option value="Batizado">Batizado</option>
+                    <option value="Confraternização">Confraternização</option>
+                    <option value="Cultural">Cultural</option>
+
+                    <option value="Outros">Outros</option>
+                </select>
             </div>
             <div class="form-group mb-3">
                 <label for="data_evento">Data</label>
