--- a/templates/html/pages/admin/pagamentos-admin.html
+++ b/templates/html/pages/admin/pagamentos-admin.html
@@ -26,7 +26,7 @@
               <td class="text-center">{{ pagamento[2] }}</td>
               <td class="text-center">{{ pagamento[7] }}</td>
               <td class="text-center">{{ pagamento[5] }}</td>
-              <td class="text-center">{{ pagamento[6] }}</td>
+              <td class="text-center">{{ pagamento[6] | datetime('%d/%m/%Y')}}</td>
               <td class="text-center">
                   <a href="{{ url_for('editar_pagamento', id_pagto=pagamento[0]) }}" class="btn btn-warning">Editar</a>
                   <form action="{{ url_for('deletar_pagamento', id_pagto=pagamento[0]) }}" method="POST" style="display:inline;" onsubmit="return confirmDelete();">
