--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -46,6 +46,27 @@
   </div>
 </div>
 
+<script>
+  document.getElementById('cpf').addEventListener('input', formatCPF);
+  
+  function formatCPF(event) {
+      const input = event.target;
+      let value = input.value.replace(/\D/g, ''); // Remove all non-digit characters
+      value = value.substring(0, 11); // Limit to 11 digits
+  
+      // Format the value as CPF
+      if (value.length > 9) {
+          value = value.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
+      } else if (value.length > 6) {
+          value = value.replace(/(\d{3})(\d{3})(\d{3})/, '$1.$2.$3');
+      } else if (value.length > 3) {
+          value = value.replace(/(\d{3})(\d{3})/, '$1.$2');
+      }
+  
+      input.value = value;
+  }
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
