--- a/templates/html/pages/cliente/formulario-cliente.html
+++ b/templates/html/pages/cliente/formulario-cliente.html
@@ -23,15 +23,15 @@
           <div class="col-md-6">
             <div class="mb-3">
               <label for="nome" class="form-label">Nome:</label>
-              <input type="text" class="form-control" placeholder="Nome" name="nome">
+              <input type="text" class="form-control" placeholder="Nome" name="nome" required>
             </div>
             <div class="mb-3">
               <label for="cpf" class="form-label">CPF:</label>
-              <input type="text" class="form-control" placeholder="CPF" name="cpf">
+              <input type="text" class="form-control" placeholder="CPF" name="cpf" id="cpf" required>
             </div>
             <div class="mb-3">
               <label for="celular" class="form-label">Celular:</label>
-              <input type="text" class="form-control" placeholder="Celular" name="celular">
+              <input type="text" class="form-control" placeholder="Celular" name="celular" id="celular" required>
             </div>
           </div>
 
@@ -39,15 +39,15 @@
           <div class="col-md-6">
             <div class="mb-3">
               <label for="endereco" class="form-label">Endereço:</label>
-              <input type="text" class="form-control" placeholder="Endereço" name="endereco">
+              <input type="text" class="form-control" placeholder="Endereço" name="endereco" required>
             </div>
             <div class="mb-3">
               <label for="senha" class="form-label">Senha:</label>
-              <input type="password" class="form-control" placeholder="Senha" name="senha">
+              <input type="password" class="form-control" placeholder="Senha" name="senha" required>
             </div>
             <div class="mb-3">
               <label for="confirmar_senha" class="form-label">Confirmar Senha:</label>
-              <input type="password" class="form-control" placeholder="Confirmar Senha" name="confirmar_senha">
+              <input type="password" class="form-control" placeholder="Confirmar Senha" name="confirmar_senha" required>
             </div>
           </div>
         </div>
@@ -60,6 +60,43 @@
     </form>
   </div>
 </div>
+
+<script>
+  document.getElementById('cpf').addEventListener('input', formatCPF);
+  document.getElementById('celular').addEventListener('input', formatCelular);
+  
+  function formatCPF(event) {
+      const input = event.target;
+      let value = input.value.replace(/\D/g, ''); // Remove all non-digit characters
+      value = value.substring(0, 11); // Limit to 11 digits
+  
+      // Format the value as CPF
+      if (value.length > 9) {
+          value = value.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
+      } else if (value.length > 6) {
+          value = value.replace(/(\d{3})(\d{3})(\d{3})/, '$1.$2.$3');
+      } else if (value.length > 3) {
+          value = value.replace(/(\d{3})(\d{3})/, '$1.$2');
+      }
+  
+      input.value = value;
+  }
+  
+  function formatCelular(event) {
+      const input = event.target;
+      let value = input.value.replace(/\D/g, ''); // Remove all non-digit characters
+      value = value.substring(0, 11); // Limit to 11 digits
+  
+      // Format the value as Celular
+      if (value.length > 6) {
+          value = value.replace(/(\d{2})(\d{5})(\d{4})/, '($1) $2-$3');
+      } else if (value.length > 2) {
+          value = value.replace(/(\d{2})(\d{5})/, '($1) $2');
+      }
+  
+      input.value = value;
+  }
+  </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
